tests/snapshots/integration_tests__ascii_mode.snap
---
source: tests/integration_tests.rs
expression: result.output
---
+---+        +---+
| A |------->| B |
+---+        +---+
