tests/snapshots/integration_tests__bt_direction.snap
---
source: tests/integration_tests.rs
expression: result.output
---
┌───┐
│ B │
└───┘
  │
  ▲
  │
  │
┌───┐
│ A │
└───┘
