tests/snapshots/integration_tests__chained_edges.snap
---
source: tests/integration_tests.rs
expression: result.output
---
┌───┐        ┌───┐        ┌───┐        ┌───┐
│ A │───────▶│ B │───────▶│ C │───────▶│ D │
└───┘        └───┘        └───┘        └───┘
