tests/snapshots/integration_tests__comments_ignored.snap
---
source: tests/integration_tests.rs
expression: result.output
---
┌───┐        ┌───┐
│ A │───────▶│ B │
└───┘        └───┘
