tests/snapshots/integration_tests__d2_auto.snap
---
source: tests/integration_tests.rs
expression: result2.output
---
┌─────┐
│Start│
└─────┘
   │
   │
   │
   ▼
 ┌───┐
 │End│
 └───┘
