tests/snapshots/integration_tests__d2_backward_arrow.snap
---
source: tests/integration_tests.rs
expression: result.output
---
┌───┐
│ B │
└───┘
  │
  │
  │
  ▼
┌───┐
│ A │
└───┘
