tests/snapshots/integration_tests__d2_cloud_shape.snap
---
source: tests/integration_tests.rs
expression: result.output
---
┌──────────────┐
│{shape: cloud}│
└──────────────┘
        │
        │
        │
        ▼
    ┌──────┐
    │server│
    └──────┘
