tests/snapshots/integration_tests__d2_containers.snap
---
source: tests/integration_tests.rs
expression: result.output
---
┌───────┐        ┌────────┐        ┌───────┐
│backend│        │frontend│        │Web App│
└───────┘        └────────┘        └───────┘
                                       │
                                       │
                      ┌────────────────┘
                      ▼
                ┌──────────┐
                │API Server│
                └──────────┘
                      │
                      │
                      │
                      ▼
                 ┌────────┐
                 │Database│
                 └────────┘
