tests/snapshots/integration_tests__d2_document_shape.snap
---
source: tests/integration_tests.rs
expression: result.output
---
┌─────────────────┐
│{shape: document}│
└─────────────────┘
         │
         │
         │
         ▼
     ┌──────┐
     │server│
     └──────┘
