tests/snapshots/integration_tests__d2_edge_labels.snap
---
source: tests/integration_tests.rs
expression: result.output
---
┌──────┐
│client│
└──────┘
    │
    │
    │HTTP
    ▼
┌──────┐
│server│
└──────┘
    │
    │SQL q
   ┌┘
   ▼
 ┌───┐
 │db │
 └───┘
