tests/snapshots/integration_tests__d2_labels.snap
---
source: tests/integration_tests.rs
expression: result.output
---
┌──────────┐
│Web Server│
└──────────┘
      │
      │
      │
      ▼
 ┌────────┐
 │Database│
 └────────┘
