tests/snapshots/integration_tests__d2_line.snap
---
source: tests/integration_tests.rs
expression: result.output
---
┌───┐
│ A │
└───┘
  │
  │
  │
  │
┌───┐
│ B │
└───┘
